@startuml
class fdroid_v1.V1DownloadAndImportService

class fdroid_v1.Entity <<JsonEntity>>
class fdroid_v1.Service

fdroid_v1.Service --> fdroid_v1.Entity : uses

fdroid_v1.V1DownloadAndImportService --> fdroid_v1.Service : uses
fdroid_v1.V1DownloadAndImportService --> fdroid_v1.Entity : uses

fdroid_v1.V1DownloadAndImportService --> fdroid_domain.model : uses

class fdroid_domain.Repository <<interface>>
class fdroid_domain.Entity <<DatabaseEntity>>
class fdroid_domain.Service

fdroid_domain.Service --> fdroid_domain.Entity : uses
fdroid_domain.Service -> fdroid_domain.Repository : uses
fdroid_domain.Repository --> fdroid_domain.Entity : uses
@enduml